Completed 2 new dancers: bouncy + fade.

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,11 +6,16 @@
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/bouncyDancer.js"></script>
+    <script src="src/fadeDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">add a blinky dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBouncyDancer">add a bouncy dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeFadeDancer">add a fade dancer</a>        
+    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
