--- a/dancefloor.html
+++ b/dancefloor.html
@@ -14,7 +14,8 @@
       <span class="title">object dance party</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">add a blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBouncyDancer">add a bouncy dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeFadeDancer">add a fade dancer</a>        
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeFadeDancer">add a fade dancer</a>
+      <a href="#" class="lineUpButton">Line up</a>        
     </div>
     <script src="src/init.js"></script>
   </body>
