Added danceOff Functionality

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -8,6 +8,7 @@
     <script src="src/blinkyDancer.js"></script>
     <script src="src/bouncyDancer.js"></script>
     <script src="src/fadeDancer.js"></script>
+    <script src="src/moonWalkingDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
@@ -15,8 +16,12 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">add a blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBouncyDancer">add a bouncy dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeFadeDancer">add a fade dancer</a>
-      <a href="#" class="lineUpButton">Line up</a>        
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeMoonWalkerDancer">add a moonwalker dancer</a>
+      <a href="#" class="danceFight"">DanceOff!</a>
+      
+      <a href="#" class="lineUpButton">Line up</a>
+      <a href="#" class="lineUpButtonSplit">Split up!</a>        
     </div>
     <script src="src/init.js"></script>
-  </body>
+  </body> 
 </html>
